--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@uniswap/sdk": "^3.0.3",
     "@walletconnect/web3-subprovider": "^1.0.0-beta.25",
-    "ethers": "^4.0.27",
+    "ethers": "^5.0.32",
     "http-proxy-middleware": "^0.19.1",
     "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
