--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-export-default-from": "^7.12.13",
     "dotenv-webpack": "^1.7.0",
     "netlify-lambda": "^1.5.1",
     "npm-run-all": "^4.1.5",
