feat: remove google maps suggestion

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Unisocks",
-  "name": "Unisocks Exchange",
+  "short_name": "Nakamot'Os",
+  "name": "Nakamot'Os",
   "icons": [
     {
       "src": "favicon.ico",
