feat: add function to get customer info from shopify

--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "axios": "^0.21.1",
     "ethers": "^5.0.32",
     "faunadb": "^2.6.1"
-  }
+  },
+  "devDependencies": {}
 }
