feat: swtich to mainnet

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_MAINNET_PROVIDER_URL=https://mainnet.infura.io/v3/YOUR_INFURA_KEY
 REACT_APP_GOERLI_PROVIDER_URL=https://goerli.infura.io/v3/YOUR_INFURA_KEY
-NETWORK=goerli
+REACT_APP_NETWORK=mainnet
